# mcp

docusaurus/: sidebars.ts
docusaurus/docs/servers/: aws-iot-sitewise-mcp-server.mdx
docusaurus/static/assets/: server-cards.json
src/aws-iot-sitewise-mcp-server/: CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  run_server.py  setup.py  test_server.py
src/aws-iot-sitewise-mcp-server/awslabs/: __init__.py
src/aws-iot-sitewise-mcp-server/awslabs/aws_iot_sitewise_mcp_server/: __init__.py  consts.py  iotsitewise.py  models.py  server.py  utils.py  validation.py
src/aws-iot-sitewise-mcp-server/awslabs/aws_iot_sitewise_mcp_server/prompts/: __init__.py  asset_hierarchy.py  dashboard_setup.py  data_exploration.py  data_ingestion.py
src/aws-iot-sitewise-mcp-server/awslabs/aws_iot_sitewise_mcp_server/tools/: sitewise_access.py  sitewise_asset_models.py  sitewise_assets.py  sitewise_data.py  sitewise_gateways.py  sitewise_portals.py
src/aws-iot-sitewise-mcp-server/doc/: conf.py  index.rst
src/aws-iot-sitewise-mcp-server/scripts/: cleanup_test_resources.py  run_integration_tests.py  verify_api_constraints.py
src/aws-iot-sitewise-mcp-server/tests/: __init__.py  test_cleanup_utils.py  test_init.py  test_server.py  test_sitewise_tools.py  test_utils.py
src/aws-iot-sitewise-mcp-server/tests/integration/: test_integration.py
